# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*froxlor-0.9.1 (15 Feb 2010)

  15 Feb 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.ebuild, +froxlor-0.9.1.ebuild:
  version bump, remove old

*froxlor-0.9 (01 Feb 2010)

  01 Feb 2010; Froxlor Release Team <release@froxlor.org>
  +froxlor-0.9.ebuild, froxlor-9999.ebuild:
  version bump, small cleanup

  30 Jan 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  pkg_preinst -> pkg_setup
